--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<audio id="bgm"></audio>
 	<audio id="sfx"></audio>
-	<canvas id="game"></canvas>
+	<canvas id="game" height="512" width="512"></canvas>
 
 	<script src="js/game.js"></script>
 	<script>
