Moved build to external

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<audio id="sfx"></audio>
 	<canvas id="game" height="512" width="512"></canvas>
 
-	<script src="js/game.js"></script>
+	<script src="game.js"></script>
 	<script>
 		var g = new Game('game', 'bgm', 'sfx');
 	</script>
